refactor: Make LogParserService thread-safe with concurrent collections
- Replace ArrayList with ConcurrentLinkedQueue for thread-safe entry storage
- Replace primitive int with AtomicInteger for thread-safe error counting
- Update all error increment operations to use incrementAndGet()
- Return unmodifiable list from getStoredEntries() to prevent external modification
- Add comments explaining thread safety choices
- Fix test expectations for unmodifiable list behavior